--- a/hw1/package.json
+++ b/hw1/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "uuid": "^9.0.1"
   }
 }
